# etee-OpenVR-Driver

./: .clang-format  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md
dev-resources/: AxisRenderModel.blend  AxisRenderModel.blend1  eteeTrackerSVGDev.ai
dev-resources/dev-rendermodels/axis/: axis.mtl
dev-resources/dev-rendermodels/axis_grey/: axis_grey.json
device json files/: etee-tracker-source-json.json  etee-tracker-spi-right-source-json.json
etee/: driver.vrdrivermanifest
etee/resources/: driver.vrresources
etee/resources/anims/: etee_accessory_anim.glb  etee_curl_anim.glb
etee/resources/firmware/: manifest.vrfirmware
etee/resources/firmware/etee_tracker/: etee_tracker_application_v1633401582.fw  etee_tracker_radio_v1633401582.fw
etee/resources/input/: etee_controller_profile.json  etee_controller_remapping.json  etee_tracker_profile.json
etee/resources/input/bindings/: application.generated.unity.knux.exe_etee_controller.json  etee_controller_legacy_bindings.json  openvr.component.vrcompositor_etee_controller.json  openvr.tool.steamvr vibration test.exe_etee_controller.json  openvr.tool.steamvr_environments_etee_controller.json  openvr.tool.steamvr_room_setup_etee_controller.json  openvr.tool.svr-haptic-testing-tool.exe_etee_controller.json  steam.app.1079800_etee_controller_with_any_tracker.json  steam.app.1318090_etee_controller.json  steam.app.1363430_etee_controller_with_any_tracker.json  steam.app.1408230_etee_controller.json  steam.app.327140_etee_controller.json  steam.app.400940_etee_controller_with_any_tracker.json  steam.app.438100_etee_controller.json  steam.app.438100_etee_controller_with_any_tracker.json  steam.app.438100_etee_controller_with_avr_vive.json  steam.app.438100_etee_controller_with_basic_adaptor.json  steam.app.438100_etee_controller_with_eteeTracker_AVRTundra.json  steam.app.438100_etee_controller_with_eteetracker_avr_tundra.json  steam.app.438100_etee_controller_with_raw_pose.json  steam.app.450390_etee_controller.json  steam.app.450390_etee_controller_with_avr_vive.json  steam.app.450390_etee_controller_with_eteetracker_avr_tundra.json  (+21 more)
etee/resources/localization/: localization.json  localization_en_us.json
etee/resources/settings/: default.vrsettings
include/: ControllerPose.h  DeviceConfiguration.h  DeviceProvider.h  TrackerDiscovery.h
include/Communication/: CommunicationManager.h  SerialCommunicationManager.h
include/DeviceDriver/: DeviceDriver.h  EteeDriver.h
include/Encode/: EncodingManager.h  EteeEncodingManager.h  Thresholds.h
include/Hooks/: HookReceiver.h  Hooking.h
src/: ControllerPose.cpp  DeviceFactory.cpp  DeviceProvider.cpp  TrackerDiscovery.cpp
src/Communication/: SerialCommunicationManager.cpp
src/DeviceDriver/: EteeDriver.cpp
src/Encode/: EteeEncodingManager.cpp  Thresholds.cpp
src/Util/: AnimLoader.cpp  Bones.cpp  Math.cpp  Quaternion.cpp  Windows.cpp
wiki/: Customer_User_Guide.md  Driver_Specication.md  JSON-Files.md  input-profiles.md
(+26 files in other folders)
